# MagnumIO

./: .gitmodules  CONTRIBUTING.md  README.md
dev-env/: .gitignore  LICENSE  README.md  installer.sh  magnum-io-hpccm.py  magnum-io.Dockerfile  third_party.txt
gds/benchmarks/pytorch/: LICENSE  README.md
gds/benchmarks/pytorch/deepCam-inference/: .gitignore  LICENSE  README.md
gds/benchmarks/pytorch/deepCam-inference/architecture/: __init__.py  deeplab_xception.py
gds/benchmarks/pytorch/deepCam-inference/data/: cam_numpy_dali_dataset.py
gds/benchmarks/pytorch/deepCam-inference/driver/: test_numpy_dali.py
gds/benchmarks/pytorch/deepCam-inference/scripts/: bind.sh  run_benchmark.sh  run_docker_deepcam.sh  run_docker_download_data.sh
gds/benchmarks/pytorch/deepCam-inference/share/: model_part52
gds/benchmarks/pytorch/deepCam-inference/utils/: download_data.py  h52npy.py  losses.py  model_handler.py  parser.py  visualizer.py
gds/benchmarks/pytorch/docker/: Dockerfile  Dockerfile~  build_docker.sh
gds/docker/: README.md  gds-run-container
gds/readers/cucim-gds/: README.md  test_gds.py
gds/readers/pytorch-numpy/: .gitignore  CMakeLists.txt  README.md  setup.py
gds/readers/pytorch-numpy/cpp/: main.cpp  numpy_reader.cpp  numpy_reader.h  thread_pool.cpp  thread_pool.h
gds/readers/pytorch-numpy/python/: __init__.py  example.py
gds/readers/zarr-python/: README.md
gds/samples/: Makefile  README.md  README.txt  cufile_sample_001.cc  cufile_sample_002.cc  cufile_sample_003.cc  cufile_sample_004.cc  cufile_sample_005.cc  cufile_sample_006.cc  cufile_sample_007.cc  cufile_sample_008.cc  cufile_sample_009.cc  cufile_sample_010.cc  cufile_sample_011.cc  cufile_sample_012.cc  cufile_sample_013.cc  cufile_sample_014.cc  cufile_sample_015.cc  cufile_sample_016.cc  cufile_sample_017.cc  cufile_sample_018.cc  cufile_sample_019.cc  cufile_sample_020.cc  cufile_sample_021.cc  cufile_sample_022.cc  cufile_sample_023.cc  cufile_sample_024.cu  cufile_sample_025.cc  cufile_sample_026.cc  cufile_sample_027.cc  cufile_sample_028.cc  cufile_sample_029.cc  cufile_sample_030.cc  cufile_sample_031.cc  cufile_sample_032.cc  cufile_sample_033.cc  cufile_sample_034.cc  cufile_sample_thrust.h  cufile_sample_utils.h  vectorAdd.cu
gds/samples/buffer-agnostic/: Makefile  README.txt  buffer-agnostic.cc
gds/samples/python/: sample_001.py  sample_002.py  sample_003.py  sample_004.py  sample_005.py  sample_006.py  sample_007.py  sample_008.py  sample_009.py  sample_010.py
gds/tests/: README.txt
gds/tools/: README.txt
gds/tools/ioblitz/: CMakeLists.txt  README.md
gds/tools/ioblitz/src/: ioblitz.c  ioblitz.h
